--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -13,5 +13,9 @@
 braintree_merchant_id: "your id"
 braintree_public_key: "your key"
 braintree_private_key: "your key"
-plan_a_price: 5
-plan_b_price: 20
+plan_a_price: "5"
+plan_b_price: "20"
+
+
+smtp_user_name: "your mail"
+smtp_password: "your pw"
